--- a/code.ipynb
+++ b/code.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "04d22516",
+   "metadata": {},
+   "source": [
+    "# The notebook runs on Google Colab environment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1de4b733",
@@ -24,12 +32,11 @@
    "outputs": [],
    "source": [
     "#resize pictures\n",
-    "\n",
     "import os\n",
     "from PIL import Image\n",
     "\n",
     "\n",
-    "files = FILE PATH\n",
+    "files = \"/root/.cache/kagglehub/datasets/riyaelizashaju/isic-skin-disease-image-dataset-labelled/versions/1/ISIC_Labelled/\"\n",
     "for filename in os.listdir(files):\n",
     "  pic_file = os.path.join(files, filename)\n",
     "  for pic in os.listdir(pic_file):\n",
@@ -37,7 +44,39 @@
     "    new_image = image.resize((224, 224))\n",
     "    output_dir = f\"resize/{filename}\"\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
-    "    new_image.save(f\"{output_dir}/{pic}\")\n"
+    "    new_image.save(f\"{output_dir}/{pic}\")\n",
+    "    #if you have a low space, use the code blow to delete pictures after resize\n",
+    "    #os.remove(os.path.join(pic_file, pic))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e61390d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Normalize 5 random pictures from any classes\n",
+    "from torchvision import transforms\n",
+    "import os, random\n",
+    "from PIL import Image\n",
+    "\n",
+    "def Normalizer():\n",
+    "    transform = transforms.Compose([\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                            std=[0.229, 0.224, 0.225])\n",
+    "    ])\n",
+    "\n",
+    "    folders = \"/content/resize/\"\n",
+    "    for folder in os.listdir(folders):\n",
+    "      fo_imgs = os.path.join(folders, folder)\n",
+    "      pics = os.listdir(fo_imgs)\n",
+    "      chosen = random.sample(pics, 5)\n",
+    "      for pic in chosen:\n",
+    "        image = os.path.join(fo_imgs, pic)\n",
+    "        img = Image.open(image)\n",
+    "        tensor = transform(img)"
    ]
   }
  ],
