--- a/code.ipynb
+++ b/code.ipynb
@@ -61,7 +61,7 @@
     "import os, random\n",
     "from PIL import Image\n",
     "\n",
-    "def Normalizer():\n",
+    "def Normalizer(X):\n",
     "    transform = transforms.Compose([\n",
     "        transforms.ToTensor(),\n",
     "        transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
@@ -69,14 +69,20 @@
     "    ])\n",
     "\n",
     "    folders = \"/content/resize/\"\n",
+    "    data = []\n",
+    "    \n",
     "    for folder in os.listdir(folders):\n",
+    "      label = folder\n",
     "      fo_imgs = os.path.join(folders, folder)\n",
     "      pics = os.listdir(fo_imgs)\n",
-    "      chosen = random.sample(pics, 5)\n",
+    "      chosen = random.sample(pics, min(X, len(pics)))\n",
+    "\n",
     "      for pic in chosen:\n",
-    "        image = os.path.join(fo_imgs, pic)\n",
-    "        img = Image.open(image)\n",
-    "        tensor = transform(img)"
+    "        path = os.path.join(fo_imgs, pic)\n",
+    "        img = Image.open(path).convert(\"RGB\")\n",
+    "        tensor = transform(img)\n",
+    "        data.append((label, tensor))\n",
+    "    return data\n"
    ]
   }
  ],
